@@ -1025,6 +1025,12 @@ and common B<XDG_*> variable.  B<HOME> and B<XDG_RUNTIME_DIR> are each
 set to a distinct writable directory. The rest of the environment
 variables are cleared.
 
+=item -
+
+The B<dh> command will now error if an override or hook target for an
+obsolete command (e.g. B<dh_systemd_enable>) are present in
+F<debian/rules>.
+
 =back
 
 =back
