@@ -472,6 +472,13 @@ remove_command_options($command, $opt1, $opt2, ...)
 
 	Cannot be used in "arch-only"/"indep-only" mode.
 
+declare_command_obsolete($command)
+	Declare $command as obsolete, which make dh warn about leftover
+	override / hook targets.  Note that $command MUST NOT be present
+	in the sequence!
+
+	Cannot be used in "arch-only"/"indep-only" mode.
+
 Logging helpers and dh_missing:
 -------------------------------
 
