@@ -11,6 +11,10 @@ my $include_if_compat_X_or_newer = sub {
 	return;
 };
 
+my @obsolete_command = (
+	$include_if_compat_X_or_newer->(10, 'dh_systemd_enable', 'dh_systemd_start'),
+);
+
 my @bd_minimal = qw{
 	dh_testdir
 };
@@ -88,5 +92,9 @@ _add_sequence('clean', SEQUENCE_NO_SUBSEQUENCES, @bd_minimal, qw{
 	dh_auto_clean
 	dh_clean
 });
+
+for my $command (@obsolete_command) {
+	declare_command_obsolete($command);
+}
 
 1;
