@@ -11,6 +11,9 @@ debhelper (12.8) UNRELEASED; urgency=medium
     internal limitations in debhelper.  Attempts to use
     it in compat 9 will trigger an error.  Thanks to
     Christoph Berg for the suggestion.  (Closes: #885994)
+  * dh: Detect and warn about override and hook targets
+    for known obsolete commands.  In compat 13, this will
+    be an error instead of a warning.
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
